# library-service-api

./: .env.sample  .gitignore  Dockerfile  README.md  build.sh  db.json  docker-compose.yml  library.jfif  pyproject.toml  requirements.txt
book/: models.py  serializers.py  tests.py  urls.py  views.py
book/migrations/: 0001_initial.py
borrowing/: admin.py  filters.py  models.py  serializers.py  tasks.py  telegram.py  tests.py  urls.py  views.py
borrowing/migrations/: 0001_initial.py  0002_alter_borrow_actual_return_date.py
library_service/: celery.py  settings.py  urls.py
payment/: models.py  payment.py  serializers.py  urls.py  views.py
payment/migrations/: 0001_initial.py  0002_alter_payment_money_to_pay.py  0003_alter_payment_borrowing_alter_payment_session_id.py  0004_alter_payment_session_url.py
user/: models.py  urls.py
user/migrations/: 0001_initial.py
